fix slideshow on mobile

--- a/style.css
+++ b/style.css
@@ -188,7 +188,7 @@ a:visited {
   position: relative;
   overflow: hidden;
   align-self: center;
-  max-width: 600px;
+  max-width: 800px;
   padding: 2px;
   border: 4px solid var(--accent-color);
 }
@@ -196,8 +196,9 @@ a:visited {
   display: flex;
   justify-content: left;
   align-items: center;
-  width: 300%;
-  height: 100%;
+  width: 1600px;
+  overflow: hidden;
+  height: 80px;
   transform: translateX(0);
   animation: slideshow 8s linear infinite;
 }
@@ -205,19 +206,17 @@ a:visited {
   animation-play-state: paused;
 }
 @keyframes slideshow {
-  0% {
-    transform: translateX(0);
-  }
   100% {
-    transform: translateX(calc(-2 * 100% / 3));
+    transform: translateX(-50%);
   }
 }
 
 .tech-stack-icon {
-  margin: 1vw;
-  max-width: 15vw;
+  margin: 10px;
+  width: 80px;
   height: auto;
 }
+
 .profile-about,
 .fac-about {
   font-family: Montserrat, sans-serif;
@@ -269,4 +268,10 @@ a:visited {
 }
 .highlight {
   background-color: var(--accent-color);
+}
+
+@media only screen and (max-width: 600px) {
+  .tech-stack-slideshow {
+    width: 90vw;
+  }
 }
